# meme-coin

./: README.md  codemagic.yaml  index.html
backend/: README.md  codemagic.yaml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: routes.py
backend/app/core/: __init__.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/services/: __init__.py
backend/app/dependencies/: __init__.py  db.py
backend/app/models/: __init__.py  job.py
backend/app/schemas/: jobs.py
backend/app/services/: __init__.py  ai_job_service.py  storage_service.py
backend/tests/: __init__.py  test_routes_placeholder.py
mobile/: README.md  pubspec.yaml
mobile/lib/: app.dart  main.dart
mobile/lib/core/config/: app_config.dart
mobile/lib/core/models/: ecu_file.dart
mobile/lib/core/services/ble/: ble_manager.dart
mobile/lib/core/utils/: logger.dart
mobile/lib/dependency_injection/: service_locator.dart
mobile/lib/features/connection/presentation/: connection_screen.dart
mobile/lib/features/flashing/presentation/: flashing_screen.dart
mobile/lib/features/home/presentation/: home_screen.dart
mobile/lib/routes/: app_router.dart
