[tool.poetry]
name = "ai-tuner-backend"
version = "0.1.0"
description = "FastAPI backend for AI-assisted ECU tuning workflow."
authors = ["AI-Tuner Team <dev@ai-tuner.io>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.36"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic = "^1.10.15"
boto3 = "^1.34.150"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
